[tool.poetry]
name = "radio-telemetry-tracker-drone-fds"
version = "0.1.0"
description = ""
authors = ["Tyler Flar <tflar@ucsd.edu>"]
packages = [
    { include = "radio_telemetry_tracker_drone_fds" },
]

[tool.poetry.dependencies]
python = "^3.12"
smbus2 = "^0.4.3"
rct_dsp2 = { path = "/workspace/radio_collar_tracker_dsp2" }
aioconsole = "^0.8.0"

[tool.poetry.dev-dependencies]
ruff = "^0.6.3"
black = "^24.8.0"

[tool.poetry.scripts]
rttDroneFDS = "radio_telemetry_tracker_drone_fds.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
