[project]
name = "radio-telemetry-tracker-drone-fds"
version = "0.4.0"
description = "Radio Telemetry Tracker Drone FDS"
readme = "README.md"
authors = [
    { name = "TylerFlar", email = "tflar@ucsd.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pynmea2>=1.19.0",
    "pyproj>=3.7.1",
    "pyserial>=3.5",
    "radio-telemetry-tracker-drone-comms-package",
    "rct-dsp2",
    "smbus2>=0.5.0",
]

[project.scripts]
radio-telemetry-tracker-drone-fds = "radio_telemetry_tracker_drone_fds.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radio_telemetry_tracker_drone_fds"]

[tool.uv.sources]
rct-dsp2 = { git = "https://github.com/UCSD-E4E/radio_collar_tracker_dsp2.git", rev = "v1.1.1" }
radio-telemetry-tracker-drone-comms-package = { git = "https://github.com/UCSD-E4E/radio-telemetry-tracker-drone-comms-package.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-assume>=2.4.3",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=5 --tb=short"